# research-coding-pipeline

./: .env.example  .gitignore  README.md  main.py  pipeline.py  pyproject.toml  state.py
bridge/: README.md  __init__.py  codex_prompt_gen.py
configs/: 3dgs_compression.yaml  ser_cnn_bilstm.yaml
executors/: __init__.py  kaggle_executor.py  modal_executor.py
nodes/: __init__.py  code_generator.py  common.py  experiment_runner.py  log_analyst.py  optimizer.py  report_generator.py
tests/: conftest.py  test_codex_prompt_bridge.py  test_llm_routing.py  test_notifier.py  test_pipeline_mock.py
utils/: __init__.py  chart_generator.py  error_handler.py  llm.py  metrics_parser.py  notifier.py
